# acupoints-face-atlas

./: .gitignore  build.gradle  local.properties  settings.gradle
app/: .gitignore  build.gradle
app/src/androidTest/java/acu/face/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  atlasManager.cpp  atlasManager.h
app/src/main/cpp/JNIs/: dlib_face_landmark.cpp  dlib_face_landmark.h  jni_interface.cpp  jni_interface.h  jni_main.h
app/src/main/cpp/detector/: DLibFace68.cpp  DLibFace68.h
app/src/main/cpp/proto/: compile.sh  messages.pb.cc  messages.pb.h  messages.proto
app/src/main/java/acu/face/: GLActivity.java  ImageAnalyzer.java  JNIInterface.java  MainActivity.java
app/src/main/java/acu/face/Detection/: DLibFace.java  DLibFace68.java  DLibLandmarks68Detector.java  IDLibFaceDetector.java  ImageAnalyzerDlib.java
app/src/main/java/acu/face/Utils/: fileUtils.java
app/src/main/proto/: Messages.proto  compile.sh
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/acu/face/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
